--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" /> 
   <title>permission.site</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
