Add Bluetooth permission

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <button id="video">Video</button>
 <button id="audio+video">Audio + Video</button>
 <button id="midi">MIDI</button>
+<button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
 <button id="eme">Encrypted Media (EME)</button>
 
