--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 <br><br><br>
 <p>Notes:</p>
 <table>
+<tr><td>Bluetooth</td>
+  <td>Implemented behind the experimental flag <code>chrome://flags/#enable-web-bluetooth</code>.</td>
+</tr>
+<tr><td>USB</td>
+  <td>Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
+</tr>
 <tr><td>Encrypted Media (EME)</td>
   <td>May succeed without permission depending on the implementation.<br>
     Attempts to use known key systems. (See the source for the list of supported key systems.)
