--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" /> 
   <title>permission.site</title>
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
