Fix fullscreen background and center layout vertically.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <button id="notifications">Notifications</button>
 <button id="location">Location</button>
 <button id="audio">Audio</button>
@@ -53,6 +55,7 @@
 </tr>
 </table>
 
+</div>
 
 </body>
 </html>
