Add HTTP/HTTPS toggle, fix layout and adjust for mobile.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <title>permission.site</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="style.css">
@@ -10,6 +11,14 @@
 <body>
 
 <div class="content">
+
+<a id="toggle" class="neutral" href="https://permission.site" title="Switch between HTTP and HTTPS.">
+  <span class="http">HTTP</span>
+  <div class="switch">
+    <div class="knob"></div>
+  </div>
+  <span class="https">HTTPS</span>
+</a>
 
 <button id="notifications">Notifications</button>
 <button id="location">Location</button>
