Add spacer divs to adjust vertical alignment.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+<div class="before"></div>
 <div class="content">
 
 <a id="toggle" class="neutral" href="https://permission.site" title="Switch between HTTP and HTTPS.">
@@ -66,6 +67,7 @@
 </table>
 
 </div>
+<div class="after"></div>
 
 </body>
 </html>
