Shrink HTTP/HTTPS toggle target size to just the visible part (+ a little padding).

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 <div class="before"></div>
 <div class="content">
 
-<a id="toggle" class="neutral" href="https://permission.site" title="Switch between HTTP and HTTPS.">
-  <span class="http">HTTP</span>
-  <div class="switch">
-    <div class="knob"></div>
-  </div>
-  <span class="https">HTTPS</span>
-</a>
+<div id="toggle-wrapper">
+  <a id="toggle" class="neutral" href="https://permission.site" title="Switch between HTTP and HTTPS.">
+    <span class="http">HTTP</span>
+    <div class="switch">
+      <div class="knob"></div>
+    </div>
+    <span class="https">HTTPS</span>
+  </a>
+</div>
 
 <button id="notifications">Notifications</button>
 <button id="location">Location</button>
