Add GitHub ribbon. Closes #2.

--- a/index.html
+++ b/index.html
@@ -71,5 +71,12 @@
 </div>
 <div class="after"></div>
 
+<div class="github-fork-ribbon-wrapper right">
+    <div class="github-fork-ribbon">
+        <a href="https://github.com/lgarron/badssl.com">On GitHub</a>
+    </div>
+</div>
+<link rel="stylesheet" href="github.css">
+
 </body>
 </html>
