Do not hard-code the toggle URL.
This prevents the link from navigating when on a file: URL, and allows hosting on any website at any path with the same functionality.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="content">
 
 <div id="toggle-wrapper">
-  <a id="toggle" class="neutral" href="https://permission.site" title="Switch between HTTP and HTTPS.">
+  <a id="toggle" class="neutral" href="" title="Switch between HTTP and HTTPS.">
     <span class="http">HTTP</span>
     <div class="switch">
       <div class="knob"></div>
