--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" /> 
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <title>permission.site</title>
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/app-icon.png"/>
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="app-icon.png"/>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
