--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <div class="github-fork-ribbon-wrapper right">
     <div class="github-fork-ribbon">
-        <a href="https://github.com/lgarron/badssl.com">On GitHub</a>
+        <a href="https://github.com/GoogleChrome/permission.site">On GitHub</a>
     </div>
 </div>
 <link rel="stylesheet" href="github.css">
