Add WebUSB Origin Trials Token

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
   <!-- Origin trial token needed for Web Bluetooth -->
   <meta http-equiv="origin-trial" content="AkMD+TFNGTdcUvm9dn63kps/29QgcXl1IvNPrOb0hYvURXG8Vd8QchPya7FFga//6F2gM9691aqk5+PuDvrPaggAAABaeyJvcmlnaW4iOiAiaHR0cHM6Ly9wZXJtaXNzaW9uLnNpdGU6NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0NjM3Njc4MDh9">
+  <!-- Origin trial token needed for Web USB -->
+  <meta http-equiv="origin-trial" content="AsxscPRBb7U1KJIlQrsFrZ3ea0LHwRhNkbqBKsSuLP5y3sqIqnanjKbGk4oe5+/HkownaJhI2wP6m1S70Y8xkQsAAABUeyJvcmlnaW4iOiAiaHR0cHM6Ly9wZXJtaXNzaW9uLnNpdGU6NDQzIiwgImZlYXR1cmUiOiAiV2ViVVNCIiwgImV4cGlyeSI6IDE0NjUzODkxOTd9">
   <title>permission.site</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="app-icon.png"/>
