Move github.css to third_party/.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="https://github.com/GoogleChrome/permission.site">On GitHub</a>
     </div>
 </div>
-<link rel="stylesheet" href="github.css">
+<link rel="stylesheet" href="third_party/github.css">
 
 </body>
 </html>
