Rename persistent -> persistent-storage and simplify Promise to look more like the rest of the code.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
 <button id="eme">Encrypted Media (EME)</button>
-<button id="persistent">Persistent Storage</button>
+<button id="persistent-storage">Persistent Storage</button>
 
 <button id="keygen">&lt;keygen&gt;</button>
 
