Rename audio and video to camera and microphone

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <button id="notifications">Notifications</button>
 <button id="location">Location</button>
-<button id="audio">Audio</button>
-<button id="video">Video</button>
-<button id="audio+video">Audio + Video</button>
+<button id="camera">Camera</button>
+<button id="microphone">Microphone</button>
+<button id="camera+microphone">Camera + Microphone</button>
 <button id="midi">MIDI</button>
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
