--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.6">
-  <!-- Origin trial token needed for Web Bluetooth -->
-  <meta http-equiv="origin-trial" content="AhfSHH1RbhGIG0EQtFecyS/psDGCuEdMoZTQlt7LQQDqcPOWUWIIiVobB2i4NINGC5ChhaLZ/2v8eXs92APRHw4AAABaeyJvcmlnaW4iOiAiaHR0cHM6Ly9wZXJtaXNzaW9uLnNpdGU6NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0NzQwNDAwMTd9">
+  <!-- Origin Trial Token, feature = Web Bluetooth, origin = https://permission.site expires = 2016-11-11-->
+  <meta http-equiv="origin-trial" content="ApRC1xZAw8qppy5iWGQ/omH+B6s0juOrpf1zS7Aq5dhQapCfsg6Vv+hFTGw67r+Rh9nbW0jGq8lCMPxXjPBwswoAAABaeyJvcmlnaW4iOiAiaHR0cHM6Ly9wZXJtaXNzaW9uLnNpdGU6NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0Nzg4NzIzNDJ9"/>
   <!-- Origin trial token needed for Web USB -->
   <meta http-equiv="origin-trial" content="AsxscPRBb7U1KJIlQrsFrZ3ea0LHwRhNkbqBKsSuLP5y3sqIqnanjKbGk4oe5+/HkownaJhI2wP6m1S70Y8xkQsAAABUeyJvcmlnaW4iOiAiaHR0cHM6Ly9wZXJtaXNzaW9uLnNpdGU6NDQzIiwgImZlYXR1cmUiOiAiV2ViVVNCIiwgImV4cGlyeSI6IDE0NjUzODkxOTd9">
   <!-- Origin trial token needed for Durable (Persistent) Storage -->
