--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 <button id="copy">Copy</button>
 <button id="download">Auto Download</button>
+<button id="popup">Popup</button>
+<button id="popup-delayed">Popup (delayed 2 seconds)</button>
 
 
 <br><br><br>
