Add Quota Management

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <button id="usb">USB</button>
 <button id="eme">Encrypted Media (EME)</button>
 <button id="persistent-storage">Persistent Storage</button>
+<button id="quota-management">Quota Management</button>
 <button id="protocol-handler">Protocol Handler</button>
 
 <button id="keygen">&lt;keygen&gt;</button>
