Update GitHub repo URL.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <div class="github-fork-ribbon-wrapper right">
     <div class="github-fork-ribbon">
-        <a href="https://github.com/GoogleChrome/permission.site">On GitHub</a>
+        <a href="https://github.com/chromium/permission.site">On GitHub</a>
     </div>
 </div>
 <link rel="stylesheet" href="third_party/github.css">
