Add WebAuthn attestation.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <button id="persistent-storage">Persistent Storage</button>
 <button id="quota-management">Quota Management</button>
 <button id="protocol-handler">Protocol Handler</button>
+<button id="webauthn-attestation">WebAuthn Attestation</button>
 
 <button id="keygen">&lt;keygen&gt;</button>
 <div id="keygen-container"></div>
@@ -90,6 +91,12 @@
     <code>chrome://flags/#clipboard-content-setting</code>
     <br>
     Note: Only available for secure connections (https).
+  </td>
+</tr>
+<tr>
+  <td>WebAuthn Attestation</td>
+  <td>
+    After pressing the button, you may need to touch your security key before you can see an attestation prompt.
   </td>
 </tr>
 </table>
