Add button for the Serial API
Specification: https://wicg.github.io/serial

As the WebUSB API has shipped I'm reusing the note about the
experimental flag for this new API.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <button id="midi">MIDI</button>
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
+<button id="serial">Serial</button>
 <button id="eme">Encrypted Media (EME)</button>
 <button id="persistent-storage">Persistent Storage</button>
 <button id="quota-management">Quota Management</button>
@@ -68,7 +69,7 @@
 <br><br><br>
 <p>Notes:</p>
 <table>
-<tr><td>USB</td>
+<tr><td>Serial</td>
   <td>Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
 </tr>
 <tr><td>Encrypted Media (EME)</td>
