--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <button id="camera">Camera</button>
 <button id="microphone">Microphone</button>
 <button id="camera+microphone">Camera + Microphone</button>
+<button id="screenshare">Screen Share</button>
 <button id="midi">MIDI</button>
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
