--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <button id="protocol-handler">Protocol Handler</button>
 <button id="webauthn-attestation">WebAuthn Attestation</button>
 <button id="nfc">NFC</button>
+<button id="vr">Virtual Reality (VR)</button>
+<button id="ar">Augmented Reality (AR)</button>
 
 <button id="keygen">&lt;keygen&gt;</button>
 <div id="keygen-container"></div>
@@ -71,6 +73,10 @@
 <br><br><br>
 <p>Notes:</p>
 <table>
+<tr>
+  <td>Augmented Reality (AR)</td>
+  <td>Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
+</tr>
 <tr>
   <td>NFC</td>
   <td>Android only - Implemented behind the experimental flag <code>chrome://flags/#enable-webnfc</code>.</td>
