Add Pan-Tilt-Zoom permission prompts

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <button id="camera">Camera</button>
 <button id="microphone">Microphone</button>
 <button id="camera+microphone">Camera + Microphone</button>
+<button id="pan-tilt-zoom">Pan-Tilt-Zoom</button>
+<button id="pan-tilt-zoom+microphone">Pan-Tilt-Zoom + Microphone</button>
 <button id="screenshare">Screen Share</button>
 <button id="midi">MIDI</button>
 <button id="bluetooth">Bluetooth</button>
