--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
 <button id="serial">Serial</button>
+<button id="hid">HID</button>
 <button id="eme">Encrypted Media (EME)</button>
 <button id="persistent-storage">Persistent Storage</button>
 <button id="quota-management">Quota Management</button>
@@ -85,6 +86,10 @@
 </tr>
 <tr>
   <td>Serial</td>
+  <td>Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
+</tr>
+<tr>
+  <td>HID</td>
   <td>Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
 </tr>
 <tr><td>Encrypted Media (EME)</td>
