--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <button id="serial">Serial</button>
 <button id="hid">HID</button>
 <button id="eme">Encrypted Media (EME)</button>
+<button id="idle-detection">Idle Detection</button>
 <button id="persistent-storage">Persistent Storage</button>
 <button id="quota-management">Quota Management</button>
 <button id="protocol-handler">Protocol Handler</button>
