Update Web NFC flag name

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </tr>
 <tr>
   <td>NFC</td>
-  <td>Android only - Implemented behind the experimental flag <code>chrome://flags/#enable-webnfc</code>.</td>
+  <td>Android only - Implemented behind the experimental flag <code>chrome://flags/#enable-experimental-web-platform-features</code>.</td>
 </tr>
 <tr>
   <td>Serial</td>
