--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <button id="nfc">NFC</button>
 <button id="vr">Virtual Reality (VR)</button>
 <button id="ar">Augmented Reality (AR)</button>
-
+<button id="do">Divice orientation</button>
 <button id="keygen">&lt;keygen&gt;</button>
 <div id="keygen-container"></div>
 
@@ -61,6 +61,7 @@
 
 <button id="copy">Copy</button>
 <button id="download">Auto Download</button>
+<a href="./example.c" download="example.c"><button id="download-code">Download code</button></a>
 <button id="popup">Popup</button>
 <button id="popup-delayed">Popup (delayed 5 seconds)</button>
 
