Dark mode icon is added

--- a/index.html
+++ b/index.html
@@ -133,4 +133,11 @@
 
 </body>
 
+<script>
+  var icon = document.getElementById("icon")
+  icon.onclick = function () {
+    document.body.classList.toggle("dark-theme");
+  }
+</script>
+
 </html>
