--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
   var icon = document.getElementById("icon")
   icon.onclick = function () {
     document.body.classList.toggle("dark-theme");
+    if (document.body.classList.contains("dark-theme")) {
+
+    }
   }
 </script>
 
