--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
   icon.onclick = function () {
     document.body.classList.toggle("dark-theme");
     if (document.body.classList.contains("dark-theme")) {
-
+      icon.src = "lightmode.png";
+    }
+    else {
+      icon.src = "darkmode.png";
     }
   }
 </script>
