Address code review feedback
Co-authored-by: Lucas Garron <code@garron.net>

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     Currently, only WebKit on iOS <a href="https://developer.apple.com/documentation/safari-release-notes/safari-13-release-notes">requires</a>
     the permission request.
     <br>
-    Green doesn't mean device has the required sensors.
+    Success (green) doesn't mean device has the required sensors.
   </td>
 </tr>
 </table>
