Address code review feedback

--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 <tr>
   <td>Device Orientation/Motion</td>
   <td>
-    Currently, only WebKit on iOS <a href="https://developer.apple.com/documentation/safari-release-notes/safari-13-release-notes">requires</a>
-    the permission request.
+    May succeed without permission request depending on the implementation.
     <br>
     Success (green) doesn't mean device has the required sensors.
   </td>
