Display a warning message at the top of the page when JS is disabled

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 
+<noscript>
+  <div class="jswarning">
+    This site does not function without JavaScript!
+  </div>
+</noscript>
+
 <div class="before"></div>
 <div class="content">
 
