Add Device Orientation/Motion permission requests (#88)
Add buttons to exercise DeviceOrientation and DeviceMotion event handlers, triggering permission requests if implemented.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 <button id="nfc">NFC</button>
 <button id="vr">Virtual Reality (VR)</button>
 <button id="ar">Augmented Reality (AR)</button>
+<button id="orientation">Device Orientation</button>
+<button id="motion">Device Motion</button>
 
 <button id="keygen">&lt;keygen&gt;</button>
 <div id="keygen-container"></div>
@@ -113,6 +115,12 @@
   <td>WebAuthn Attestation</td>
   <td>
     After pressing the button, you may need to touch your security key before you can see an attestation prompt.
+  </td>
+</tr>
+<tr>
+  <td>Device Orientation/Motion</td>
+  <td>
+    May succeed without permission request depending on the implementation.
   </td>
 </tr>
 </table>
