Added button for beforeunload

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <button id="fullscreen">Fullscreen</button>
 <button id="pointerlock">Pointer Lock</button>
-
+<button id="window-close">Window Close Prompt</button>
 <hr>
 
 <button id="copy">Copy</button>
