added dark theme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="app-icon.png"/>
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
 </head>
 <body>
 
@@ -20,6 +20,7 @@
 </noscript>
 
 <div class="before"></div>
+<img id="dark-theme" src="dark-theme.png" alt="">
 <div class="content">
 
 <div id="toggle-wrapper">
@@ -134,6 +135,7 @@
     </div>
 </div>
 <link rel="stylesheet" href="third_party/github.css">
+<script src="index.js"></script>
 
 </body>
 </html>
