dark theme added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </a>
 </div>
 
+<button id="dark" onclick="myFunction()">Dark Mode</button>
 <button id="notifications">Notifications</button>
 <button id="location">Location</button>
 <button id="camera">Camera</button>
