Add MIDI + SysEx button and change MIDI button behavior

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <button id="pan-tilt-zoom+microphone">Pan-Tilt-Zoom + Microphone</button>
 <button id="screenshare">Screen Share</button>
 <button id="midi">MIDI</button>
+<button id="midi+sysex">MIDI + SysEx</button>
 <button id="bluetooth">Bluetooth</button>
 <button id="usb">USB</button>
 <button id="serial">Serial</button>
