--- a/pepc.html
+++ b/pepc.html
@@ -15,6 +15,21 @@
       <div><permission id="camera" type="camera"></div>
       <div><permission id="microphone" type="microphone"></div>
       <div><permission id="camera-microphone" type="camera microphone"></div>
+      <div class="demo-instructions">
+        <h2>👩🏻‍💻 Demo instructions</h2>
+        You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element. In Chrome M120 or later, follow these instructions to enable experimental support:
+        <ul>
+          <li>Shut down the browser process.</li>
+          <li>
+            Restart the browser with these command line flags:
+            <pre>--enable-blink-features=PermissionElement --enable-features=PermissionElement</pre>
+          </li>
+          <li>
+            Ensure the flags actually took effect by verifying they appear on:
+            <pre>chrome://version</pre>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
