Add a button for keyboard lock

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 <button id="fullscreen">Fullscreen</button>
 <button id="pointerlock">Pointer Lock</button>
+<button id="keyboardlock">Keyboard Lock</button>
 
 <hr>
 
