--- a/one-time.html
+++ b/one-time.html
@@ -27,6 +27,9 @@
         <div class="access-status">
           Access status: <span id="geolocation-access-status">⚫️ unknown</span>
         </div>
+        <div class="access-status">
+          Message: <span id="geolocation-message"></span>
+        </div>
       </button>
       <button id="camera">
         Camera
@@ -35,6 +38,9 @@
         </div>
         <div class="access-status">
           Access status: <span id="camera-access-status">⚫️ unknown</span>
+        </div>
+        <div class="access-status">
+          Message: <span id="camera-message"></span>
         </div>
       </button>
       <button id="microphone">
@@ -46,6 +52,9 @@
         <div class="access-status">
           Access status: <span id="microphone-access-status">⚫️ unknown</span>
         </div>
+        <div class="access-status">
+          Message: <span id="microphone-message"></span>
+        </div>
       </button>
       <button id="camera-microphone">
         Camera + Microphone
@@ -56,6 +65,9 @@
         <div class="access-status">
           Access status:
           <span id="camera-microphone-access-status">⚫️ unknown</span>
+        </div>
+        <div class="access-status">
+          Message: <span id="camera-microphone-message"></span>
         </div>
       </button>
 
