Address comments from code review
* Make it more clear only error messages are surfaced
* Add blank indicators

--- a/one-time.html
+++ b/one-time.html
@@ -28,7 +28,7 @@
           Access status: <span id="geolocation-access-status">⚫️ unknown</span>
         </div>
         <div class="access-status">
-          Message: <span id="geolocation-message"></span>
+          Error message: <span id="geolocation-error-message">N/A</span>
         </div>
       </button>
       <button id="camera">
@@ -40,7 +40,7 @@
           Access status: <span id="camera-access-status">⚫️ unknown</span>
         </div>
         <div class="access-status">
-          Message: <span id="camera-message"></span>
+          Error message: <span id="camera-error-message">N/A</span>
         </div>
       </button>
       <button id="microphone">
@@ -53,7 +53,7 @@
           Access status: <span id="microphone-access-status">⚫️ unknown</span>
         </div>
         <div class="access-status">
-          Message: <span id="microphone-message"></span>
+          Error message: <span id="microphone-error-message">N/A</span>
         </div>
       </button>
       <button id="camera-microphone">
@@ -67,7 +67,7 @@
           <span id="camera-microphone-access-status">⚫️ unknown</span>
         </div>
         <div class="access-status">
-          Message: <span id="camera-microphone-message"></span>
+          Error message: <span id="camera-microphone-error-message">N/A</span>
         </div>
       </button>
 
