Add OT token to pepc.html

--- a/pepc.html
+++ b/pepc.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6" />
+    <meta http-equiv="origin-trial" content="ArqsmEQWQdYr+74UdOSYUcMhNxYXOo9roFBG3jxB0BPZi0nW1iddcfbKb8oW9Hlo+i0NRAxoSKhsuYMM3zhdOQwAAABaeyJvcmlnaW4iOiJodHRwczovL3Blcm1pc3Npb24uc2l0ZTo0NDMiLCJmZWF0dXJlIjoiUGVybWlzc2lvbkVsZW1lbnQiLCJleHBpcnkiOjE3Mzk5MjMxOTl9">
     <title>permission.site (permission element)</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="app-icon.png" />
