Adding additional row for error message in one-time.html. (#115)
Add additional row for error message in one-time.html. This is useful for researching if there are different types of errors for different types of permission issues.

--- a/one-time.html
+++ b/one-time.html
@@ -27,6 +27,9 @@
         <div class="access-status">
           Access status: <span id="geolocation-access-status">⚫️ unknown</span>
         </div>
+        <div class="access-status">
+          Error message: <span id="geolocation-error-message">N/A</span>
+        </div>
       </button>
       <button id="camera">
         Camera
@@ -35,6 +38,9 @@
         </div>
         <div class="access-status">
           Access status: <span id="camera-access-status">⚫️ unknown</span>
+        </div>
+        <div class="access-status">
+          Error message: <span id="camera-error-message">N/A</span>
         </div>
       </button>
       <button id="microphone">
@@ -46,6 +52,9 @@
         <div class="access-status">
           Access status: <span id="microphone-access-status">⚫️ unknown</span>
         </div>
+        <div class="access-status">
+          Error message: <span id="microphone-error-message">N/A</span>
+        </div>
       </button>
       <button id="camera-microphone">
         Camera + Microphone
@@ -56,6 +65,9 @@
         <div class="access-status">
           Access status:
           <span id="camera-microphone-access-status">⚫️ unknown</span>
+        </div>
+        <div class="access-status">
+          Error message: <span id="camera-microphone-error-message">N/A</span>
         </div>
       </button>
 
