--- a/permission-status/other-page.html
+++ b/permission-status/other-page.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6" />
     <title>permission.site</title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="app-icon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="apple-touch-icon" href="../app-icon.png" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 <body>
     <h1>This is another page.</h1>
-    <a href="/one-time.html">Back to the one-time permissions demo page</a>
+    <a href="index.html">Back to the permission status demo page</a>
 </body>
 </html>
