Fix leftover nits from PR #116

--- a/permission-status/other-page.html
+++ b/permission-status/other-page.html
@@ -10,6 +10,6 @@
   </head>
 <body>
     <h1>This is another page.</h1>
-    <a href="index.html">Back to the permission status demo page</a>
+    <a href="./index.html">Back to the permission status demo page</a>
 </body>
 </html>
