--- a/permission-status/index.html
+++ b/permission-status/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="../favicon.ico" />
   <link rel="apple-touch-icon" href="../app-icon.png" />
   <link rel="stylesheet" href="../style.css" />
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </head>
 
 <body>
