--- a/pepc.html
+++ b/pepc.html
@@ -15,6 +15,7 @@
       <div><permission id="camera" type="camera"></div>
       <div><permission id="microphone" type="microphone"></div>
       <div><permission id="camera-microphone" type="camera microphone"></div>
+      <div><permission id="geolocation" type="geolocation"></div>
       <div class="demo-instructions">
         <h2>👩🏻‍💻 Demo instructions</h2>
         You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element. In Chrome M121 or later, follow these instructions to enable experimental support:
