Added dark mode

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="darkMode">
       <p id="darkModeText">Dark Mode</p>
       <label class="switch1">
-        <input type="checkbox" onchange="toggleMode()" />
+        <input type="checkbox" id="darkmodeInput"/>
         <span class="slider1 round"></span>
       </label>
     </div>
