--- a/pepc.html
+++ b/pepc.html
@@ -18,7 +18,9 @@
       <div><permission id="geolocation" type="geolocation"></div>
       <div class="demo-instructions">
         <h2>👩🏻‍💻 Demo instructions</h2>
-        You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element. In Chrome M121 or later, follow these instructions to enable experimental support:
+        <p>You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element.</p>
+        <p>In Chrome M134 or later, go to chrome://flags, search for the "permission element" experiment, and enable it.</p>
+        <p>Alternatively in Chrome M121 or later, follow these instructions to enable experimental support:</p>
         <ul>
           <li>Shut down the browser process.</li>
           <li>
