added dark mode

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="before"></div>
 <div class="content">
 
+  <div id="dark-mode-toggle">
+    <button id="toggle-dark-mode">Toggle Theme</button>
+    <span id="dark-mode-status">Light Mode</span>
+  </div>
+
 <div id="toggle-wrapper">
   <a id="toggle" class="neutral" href="" title="Switch between HTTP and HTTPS.">
     <span class="http">HTTP</span>
