Use closing end tag for permission elements

--- a/pepc.html
+++ b/pepc.html
@@ -12,10 +12,10 @@
   <body>  
     <div class="before"></div>
     <div class="content">      
-      <div><permission id="camera" type="camera"></div>
-      <div><permission id="microphone" type="microphone"></div>
-      <div><permission id="camera-microphone" type="camera microphone"></div>
-      <div><permission id="geolocation" type="geolocation"></div>
+      <div><permission id="camera" type="camera"></permission></div>
+      <div><permission id="microphone" type="microphone"></permission></div>
+      <div><permission id="camera-microphone" type="camera microphone"></permission></div>
+      <div><permission id="geolocation" type="geolocation"></permission></div>
       <div class="demo-instructions">
         <h2>👩🏻‍💻 Demo instructions</h2>
         <p>You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element.</p>
