--- a/pepc.html
+++ b/pepc.html
@@ -13,10 +13,10 @@
   <body>  
     <div class="before"></div>
     <div class="content">      
-      <div><permission id="camera" type="camera" onpromptdismiss="promptDismissed()" onpromptaction="promptAction()"></permission></div>
-      <div><permission id="microphone" type="microphone" onpromptdismiss="promptDismissed()" onpromptaction="promptAction()"></permission></div>
-      <div><permission id="camera-microphone" type="camera microphone" onpromptdismiss="promptDismissed()" onpromptaction="promptAction()"></permission></div>
-      <div><permission id="geolocation" type="geolocation" onpromptdismiss="promptDismissed()" onpromptaction="promptAction()"></permission></div>
+      <div><permission id="camera" type="camera"></permission></div>
+      <div><permission id="microphone" type="microphone"></permission></div>
+      <div><permission id="camera-microphone" type="camera microphone"></permission></div>
+      <div><permission id="geolocation" type="geolocation"></permission></div>
       <div class="demo-instructions">
         <h2>👩🏻‍💻 Demo instructions</h2>
         <p>You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element.</p>
