Format HTML files using VS Code's default formatter to reduce the diff in #131.

--- a/permission-status/index.html
+++ b/permission-status/index.html
@@ -88,7 +88,8 @@
           Observe the <span class="permission-status">access status</span> changing based on your answer to the prompt.
         </li>
         <li>
-          Observe the <span class="permission-status">permission status</span> changing, depending on your answer to the prompt. Possible states are
+          Observe the <span class="permission-status">permission status</span> changing, depending on your answer to the
+          prompt. Possible states are
           <ul>
             <li class="permission-status"><span>🔵 prompt</span></li>
             <li class="permission-status"><span>🔴 denied</span></li>
@@ -98,12 +99,15 @@
           </ul>
         </li>
         <li>
-          Close the tab. Reopen it. Observe that based on the permission permanence model implemented by the user agent, the permission may or may not revert back to the <span class="permission-status">permission
-          status</span> <span class="permission-status">🔵 prompt</span>.
+          Close the tab. Reopen it. Observe that based on the permission permanence model implemented by the user agent,
+          the permission may or may not revert back to the <span class="permission-status">permission
+            status</span> <span class="permission-status">🔵 prompt</span>.
         </li>
         <li>
-          Navigate to <a href="other-page.html">another page</a> from the current origin in the current tab, or another tab, and compare the permissions state to what you set here. 
-          In some user agents, a certain amount of time elapsing, closing all tabs from an origin, and/or having all tabs from an origin in the background for a certain duration will reset the permission state.
+          Navigate to <a href="other-page.html">another page</a> from the current origin in the current tab, or another
+          tab, and compare the permissions state to what you set here.
+          In some user agents, a certain amount of time elapsing, closing all tabs from an origin, and/or having all
+          tabs from an origin in the background for a certain duration will reset the permission state.
         </li>
       </ol>
     </div>
