--- a/pepc.html
+++ b/pepc.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.6" />
-    <meta http-equiv="origin-trial" content="At5u2JG8xpCfyaG4rnxx+IAHIzAqs1x9p+Jw0cxdxTrHxyrGrah25ye/S25W99fPxDwbL8ME6OylpZvZYSXE3QMAAABaeyJvcmlnaW4iOiJodHRwczovL3Blcm1pc3Npb24uc2l0ZTo0NDMiLCJmZWF0dXJlIjoiUGVybWlzc2lvbkVsZW1lbnQiLCJleHBpcnkiOjE3NTU1NjE2MDB9">
-    <title>permission.site (permission element)</title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="app-icon.png" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>  
-    <div class="before"></div>
-    <div class="content">      
-      <div><permission id="camera" type="camera"></permission></div>
-      <div><permission id="microphone" type="microphone"></permission></div>
-      <div><permission id="camera-microphone" type="camera microphone"></permission></div>
-      <div><permission id="geolocation" type="geolocation"></permission></div>
-      <div class="demo-instructions">
-        <h2>👩🏻‍💻 Demo instructions</h2>
-        <p>You will see empty rectangles unless this browser implementes basic support for the &lt;permission&gt;&nbsp;element.</p>
-        <p>In Chrome M134 or later, go to <code>chrome://flags#permission-element</code> and enable the experiment.</p>
-        <p>Alternatively in Chrome M121 or later, follow these instructions to enable experimental support:</p>
-        <ul>
-          <li>Shut down the browser process.</li>
-          <li>
-            Restart the browser with these command line flag:
-            <pre>--enable-features=PermissionElement</pre>
-          </li>
-          <li>
-            Ensure the flags actually took effect by verifying they appear on:
-            <pre>chrome://version</pre>
-          </li>
-        </ul>
-      </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.6" />
+  <meta http-equiv="origin-trial"
+    content="At5u2JG8xpCfyaG4rnxx+IAHIzAqs1x9p+Jw0cxdxTrHxyrGrah25ye/S25W99fPxDwbL8ME6OylpZvZYSXE3QMAAABaeyJvcmlnaW4iOiJodHRwczovL3Blcm1pc3Npb24uc2l0ZTo0NDMiLCJmZWF0dXJlIjoiUGVybWlzc2lvbkVsZW1lbnQiLCJleHBpcnkiOjE3NTU1NjE2MDB9">
+  <title>permission.site (permission element)</title>
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="app-icon.png" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="before"></div>
+  <div class="content">
+    <div>
+      <permission id="camera" type="camera"></permission>
     </div>
-    <div class="github-fork-ribbon-wrapper right">
-      <div class="github-fork-ribbon">
-        <a href="https://github.com/chromium/permission.site">On GitHub</a>
-      </div>
+    <div>
+      <permission id="microphone" type="microphone"></permission>
     </div>
-    <link rel="stylesheet" href="third_party/github.css" />
-  </body>
+    <div>
+      <permission id="camera-microphone" type="camera microphone"></permission>
+    </div>
+    <div>
+      <permission id="geolocation" type="geolocation"></permission>
+    </div>
+    <div class="demo-instructions">
+      <h2>👩🏻‍💻 Demo instructions</h2>
+      <p>You will see empty rectangles unless this browser implementes basic support for the
+        &lt;permission&gt;&nbsp;element.</p>
+      <p>In Chrome M134 or later, go to <code>chrome://flags#permission-element</code> and enable the experiment.</p>
+      <p>Alternatively in Chrome M121 or later, follow these instructions to enable experimental support:</p>
+      <ul>
+        <li>Shut down the browser process.</li>
+        <li>
+          Restart the browser with these command line flag:
+          <pre>--enable-features=PermissionElement</pre>
+        </li>
+        <li>
+          Ensure the flags actually took effect by verifying they appear on:
+          <pre>chrome://version</pre>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="github-fork-ribbon-wrapper right">
+    <div class="github-fork-ribbon">
+      <a href="https://github.com/chromium/permission.site">On GitHub</a>
+    </div>
+  </div>
+  <link rel="stylesheet" href="third_party/github.css" />
+</body>
+
 </html>
