Add hint for what APIs access-status is supported.

--- a/pepc.html
+++ b/pepc.html
@@ -84,9 +84,10 @@
           <pre>chrome://version</pre>
         </li>
       </ul>
-      <p>After granting permissions thorugh a permission element, the underlying API will be called to verify access.
+      <p>After granting permissions through a permission element, the underlying API will be called to verify access.
         The result is reported as
         <span class="access-status">Access status</span>.
+        TODO: Access status is currently only supported by geolocation, not the other permissions.
       </p>
     </div>
   </div>
